--- a/index.html
+++ b/index.html
@@ -5,6 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>change bg</title>
+    <style>
+        *{
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: 'Courier New', Courier, monospace;
+        }
+        .main{
+            width: 100%;
+            height: 100vh;
+            animation: changebg 10s infinite linear ;
+            display: grid;
+           place-items: center;
+
+        }
+      
+    </style>
 
 </head>
 <body>
