--- a/index.html
+++ b/index.html
@@ -20,6 +20,23 @@
            place-items: center;
 
         }
+        @keyframes changebg {
+            0%{
+                background-color: aqua;
+            }
+            20%{
+                background-color:orange;
+            }
+            40%{
+                background-color: greenyellow;
+            }
+            60%{
+                background-color:hotpink;
+            }
+            80%{
+                background-color:rebeccapurple;
+            }
+        }
       
     </style>
 
